promtail/promtail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: promtail-virtualservice
spec:
  hosts:
  - "promtail.192.168.87.2.nip.io"
  gateways:
  - promtail-gateway
  http:
  - route:
    - destination:
        host: promtail-metrics.loki-stack.svc.cluster.local
        port:
          number: 3101
